# exchange-server

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: exchange-ci.yml
apps/e2e-smoke/: Cargo.toml
apps/e2e-smoke/src/: main.rs
apps/engine-ingress/: Cargo.toml
apps/engine-ingress/src/: lib.rs  main.rs
apps/fake-engine/: Cargo.toml
apps/fake-engine/src/: engine.rs  lib.rs  main.rs  redpanda.rs  settings.rs
apps/ledger/: Cargo.toml
apps/ledger/src/: main.rs  processor.rs  redpanda.rs  repository.rs  settings.rs  worker.rs
apps/orderbook-archiver/: Cargo.toml
apps/orderbook-archiver/src/: archive.rs  lib.rs  main.rs  redpanda.rs  settings.rs  worker.rs
apps/projector/: Cargo.toml
apps/projector/src/: lib.rs  main.rs  processor.rs  redpanda.rs  repository.rs  settings.rs  worker.rs
apps/server/: Cargo.toml
apps/server/src/: hot_path.rs  main.rs  protocol_map.rs  redpanda.rs  replies.rs
apps/server/src/middlewares/: auth.rs
apps/server/src/modules/: mod.rs
apps/server/src/modules/auth/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
apps/server/src/modules/balances/: dto.rs  handlers.rs  routes.rs  services.rs
apps/server/src/modules/fills/: handlers.rs  routes.rs  services.rs
apps/server/src/modules/markets/: handlers.rs  mod.rs  routes.rs  services.rs
apps/server/src/modules/orders/: dto.rs  handlers.rs  routes.rs  services.rs
apps/server/src/modules/positions/: handlers.rs  mod.rs  routes.rs  services.rs
apps/server/src/modules/requests/: handlers.rs  routes.rs
apps/server/src/modules/users/: dto.rs  handlers.rs  routes.rs  services.rs
apps/server/src/utils/: helpers.rs  types.rs
apps/timeseries/: Cargo.toml
apps/timeseries/src/: main.rs  processor.rs  redpanda.rs  repository.rs  settings.rs  worker.rs
apps/wallet/: Cargo.toml
apps/wallet/src/: engine_inputs.rs  lib.rs  main.rs  processor.rs  redpanda.rs  repository.rs  router.rs  settings.rs  worker.rs
apps/ws/: Cargo.toml
apps/ws/src/: auth.rs  consumer.rs  hub.rs  lib.rs  main.rs  messages.rs  router.rs  session.rs  settings.rs
bench-harness/: README.md  run-all.sh  run-command-flow.sh
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml  build.rs
crates/db/.sqlx/: query-05702df53920c590f1a99fadb26c3d52b0efe093a311d202d8eb66ef6bc255a3.json  query-1856d278e2e95380bb2062cbc79465b77bbb8c425523c377b71acd8d481c69ac.json  query-1d59526a54824061a0ccd1afc9fd1acbfaf986c87d537dc30a7229fba54bee0d.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-26225a86b465121e5c0254ce8ed11813044cf6cbf2935fc39256d0b0988a40da.json  query-27493ecd9a3eadbf75aafc7dd9d9de8382477a311ef317ceb14dcd2724220adb.json  query-287a44c9d5498fa7bde03cb27563ec07b4d8d3219a343381002d56d8255a5ce2.json  query-3961c76b62d0201b35f373a67a45b7fd2128b290dbd241ac7ad2258cb537f610.json  query-3a50063d42d356eb850526d2d0f268418a9b67d53d82c3020763ca0b600a684d.json  query-3c556582a91b6f599d313e3763e3682bf677d45b26048ce891f5d32bb2ca8731.json  query-3db04e2ecaa828d62e6fe4383dd72ad22f92bd5092d2dfb583137e2f5dd6f2fc.json  query-3f36bfa2f1d83f152bb0d2acc78f2a1573d00a76759efa3476bd83e08d17c243.json  query-4911af4c287ff8b091bf67b3d1fbd6767d76091ccaa49a1ebb6cab7b331948ca.json  query-4af4d63c8c2c8b295867a6a2abfba07c2cdfe8156bb41fbcedf7ccf6f084831e.json  query-550dfae150d6f4f4f2d1d100236594156589a61bff83c6ca4c8af28fae5e8d15.json  query-566b7b51c4d80b96873c0945c43b368f33964c4d500026e313b8ddfc8bab0c18.json  query-5f18a30f270dc7da05520974142755ed1c2e5a5737b9384afdfae717d1c248a0.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-69d16f0a0d55ce0b7694019b07fdb51a0ba4e4950b767b39de4e7a4299831efa.json  query-6ae6119c76e5a57b4cd0cb7fac636580a89b08f5e0bb78edb2bd9711ba21583b.json  query-7a13757cf82c149ef641c3a1b0a5fe38fb666eb50388a49804f6b40556a783b1.json  query-7f3a5424f2a3968e1613f8ef2e075eb07392dd2e83f0d3327edf35ee243e51ac.json  (+16 more)
crates/db/migrations/: 0001_init.sql  (+15 more)
crates/protocol/: Cargo.toml
docs/: configuration.md  e2e-smoke.md  engine-contract.md  engine-system-plan.md  exchange-architecture.excalidraw  fake-engine-smoke.md  ledger.md  local-development.md  orderbook.md  timeseries.md  wallet-events.md  websocket.md
docs/examples/: README.md  engine-account-delta.event.json  engine-adl-executed.event.json  engine-cancel-accepted.reply.json  engine-cancel-order.command.json  engine-cancel-rejected.reply.json  engine-checkpoint-committed.event.json  engine-fee-charged.event.json  engine-funding-payment-applied.event.json  engine-funding-rate-updated.event.json  engine-funding-rate-updated.input.json  engine-funding-settlement-tick.input.json  engine-liquidate-position.command.json  engine-liquidation-accepted.reply.json  engine-liquidation-completed.event.json  engine-liquidation-executed.event.json  engine-liquidation-rejected.reply.json  engine-liquidation-started.event.json  engine-mark-price-updated.event.json  engine-mark-price-updated.input.json  engine-order-accepted.reply.json  engine-order-cancelled.event.json  engine-order-expired.event.json  engine-order-opened.event.json  engine-order-rejected.reply.json  engine-orderbook-delta.event.json  engine-orderbook-snapshot-created.event.json  engine-place-order-reduce-only.command.json  engine-place-order.command.json  engine-position-changed.event.json  engine-reservation-released.event.json  engine-risk-state-updated.event.json  engine-trade-executed-liquidation.event.json  engine-trade-executed.event.json
docs/streams/: engine-contract.md  fake-engine-smoke.md  ledger.md  orderbook.md  timeseries.md  websocket.md
scripts/: e2e-compose.yml  e2e-infra.sh  e2e-smoke.sh
scripts/e2e/: common.sh  cpp-engine.sh  redpanda.sh
test-harness/: README.md  infra.sh  smoke.sh
test-harness/lib/: common.sh  exchange-services.sh  redpanda.sh
tools/e2e-smoke/: Cargo.toml
tools/engine-ingress/: Cargo.toml
tools/exchange-bench-driver/: Cargo.toml
tools/exchange-bench-engine-peer/: Cargo.toml
tools/exchange-bench-engine-peer/src/: main.rs
(+38 files in other folders)
