[workspace]
resolver = "3"

members = [
  "apps/server",
  "apps/ledger",
  "apps/projector",
  "apps/wallet",
  "apps/timeseries",
  "apps/ws",
  "crates/config",
  "crates/db",
  "crates/protocol",
  "tools/e2e-smoke",
  "tools/exchange-bench-driver",
  "tools/exchange-bench-engine-peer",
  "tools/engine-ingress",
]

[workspace.dependencies]
tokio={version = "1.52.3", features = ["full"]}
sqlx={version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "chrono", "json"]}
dotenvy="0.15.7"
chrono={version = "0.4.42", features = ["serde"]}
actix-web = "4"
actix-cors= "0.7.1"
rand = {version = "0.10.1", features = ["std_rng"]}
uuid ={version = "1.23.2", features = ["v4"]}
bcrypt = "0.19.1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
rskafka = { version = "0.6.0", default-features = false, features = ["compression-snappy"] }
