[package]
name = "engine-ingress"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../../crates/db" }
dotenvy = { workspace = true }
protocol = { path = "../../crates/protocol" }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
wallet = { path = "../wallet" }
