[package]
name = "fake-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
dotenvy = { workspace = true }
protocol = { path = "../../crates/protocol" }
rskafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
