[package]
name = "projector"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
db = { path = "../../crates/db" }
dotenvy = { workspace = true }
protocol = { path = "../../crates/protocol" }
rskafka = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
