[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
dotenvy = {workspace = true}
actix-web={workspace = true}
config = {path = "../../crates/config"}
db = {path = "../../crates/db"}
actix-cors= {workspace = true}
rand = {workspace = true}
uuid ={workspace = true}
bcrypt = {workspace = true}
hex={workspace = true}
jsonwebtoken={workspace = true}
serde={workspace = true}
chrono={workspace = true}
sqlx={workspace = true}