[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = { workspace = true }
actix-web-actors = "4"
dotenvy = { workspace = true }
jsonwebtoken = { workspace = true }
protocol = { path = "../../crates/protocol" }
rskafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
