[package]
name = "exchange-bench-engine-peer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { workspace = true }
protocol = { path = "../../crates/protocol" }
rskafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
